Federal holidays support (#26)