@@ -47,7 +47,9 @@ public class ReminderService {
   private final static String SQL_UPDATE_REMINDER =
       "UPDATE reminders SET " +
           Reminder.LAST_REMINDER_TIMESTAMP + " = ?, " +
-          Reminder.TRACKING_ID + " = ? " +
+          Reminder.TRACKING_ID + " = ?, " +
+          Reminder.REMINDER_YEAR + " = ?, " +
+          Reminder.REMINDER_MONTH + " = ? " +
           "WHERE " + Reminder.CALLER_ID + " = ?";
 
 
@@ -106,6 +108,8 @@ public class ReminderService {
   private String applicationBaseUrl;
   private String adminApplicationBaseUrl;
 
+  private HolidayService holidayService;
+
   private static int dayOfMonthCounter = 1;
 
   private DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
@@ -113,7 +117,7 @@ public class ReminderService {
   // TODO: Instead of distributing all callers across the month, do so for each district
   private static int getNewDayOfMonth() {
     int dayToReturn = dayOfMonthCounter;
-    dayOfMonthCounter = dayOfMonthCounter == 31 ? 1 : dayOfMonthCounter + 1;
+    dayOfMonthCounter = dayOfMonthCounter == ReminderDate.MAX_DAY ? ReminderDate.MIN_DAY : dayOfMonthCounter + 1;
     return dayToReturn;
   }
 
@@ -154,7 +158,7 @@ public class ReminderService {
 
     try {
       this.smsDeliveryService = (DeliveryService)Class.forName(
-          config.getProperty(SMS_DELIVERY_SERVICE)).newInstance();
+          config.getProperty(SMS_DELIVERY_SERVICE)).getDeclaredConstructor().newInstance();
       this.smsDeliveryService.init(config);
     }
     catch (Exception e) {
@@ -164,12 +168,20 @@ public class ReminderService {
 
     try {
       this.emailDeliveryService = (DeliveryService)Class.forName(
-          config.getProperty(EMAIL_DELIVERY_SERVICE)).newInstance();
+          config.getProperty(EMAIL_DELIVERY_SERVICE)).getDeclaredConstructor().newInstance();
       this.emailDeliveryService.init(config);
     }
     catch (Exception e) {
       logger.warning("Failed to initialize Email deliver service: " + e.getMessage());
       this.emailDeliveryService = null;
+    }
+
+    try {
+      this.holidayService = HolidayService.getInstance();
+    }
+    catch (Exception e) {
+      logger.warning("Failed to initialize Holiday service: " + e.getMessage());
+      this.holidayService = null;
     }
 
     int staleScriptWarningInDays = Integer.parseInt(config.getProperty(STALE_SCRIPT_WARNING_INTERVAL, "30"));
@@ -246,7 +258,8 @@ public class ReminderService {
 
   ReminderStatus sendReminder(
       Connection conn,
-      Caller caller) throws SQLException {
+      Caller caller,
+      ReminderDate reminderDate) throws SQLException {
 
     boolean smsReminderSent = false;
     boolean emailReminderSent = false;
@@ -301,7 +314,7 @@ public class ReminderService {
 
     ReminderStatus status = new ReminderStatus(caller, targetDistrict, smsReminderSent, emailReminderSent, trackingId);
     if (status.success()) {
-      updateReminderStatus(conn, status);
+      updateReminderStatus(conn, status, reminderDate);
     }
     return status;
   }
@@ -325,7 +338,8 @@ public class ReminderService {
 
   private void updateReminderStatus(
       Connection conn,
-      ReminderStatus reminderStatus)
+      ReminderStatus reminderStatus,
+      ReminderDate reminderDate)
       throws SQLException {
 
     Timestamp timestamp = new Timestamp(System.currentTimeMillis());
@@ -333,6 +347,8 @@ public class ReminderService {
     int idx = 1;
     update.setTimestamp(idx++, timestamp);
     update.setString(idx++, reminderStatus.getTrackingId());
+    update.setInt(idx++, reminderDate.getYear());
+    update.setInt(idx++, reminderDate.getMonth());
     update.setInt(idx, reminderStatus.getCaller().getCallerId());
     update.executeUpdate();
 
@@ -413,8 +429,6 @@ public class ReminderService {
     return success;
   }
 
-
-
   class ReminderSender implements Runnable {
 
     private boolean isAfterHours = true;
@@ -424,7 +438,7 @@ public class ReminderService {
 
       logger.info("Running reminder sender");
 
-      OffsetDateTime currentDateTime = OffsetDateTime.now();
+      OffsetDateTime currentDateTime = OffsetDateTime.now(); //TODO: base this off each user's timezone?
 
       DayOfWeek dayOfWeek = currentDateTime.getDayOfWeek();
       if (dayOfWeek.equals(DayOfWeek.SATURDAY) || dayOfWeek.equals(DayOfWeek.SUNDAY)) {
@@ -432,9 +446,15 @@ public class ReminderService {
         return;
       }
 
+      holidayService.refresh();
+      if (holidayService.isHoliday(currentDateTime)) {
+        logger.info("It's a holiday. Do nothing.");
+        return;
+      }
+
       OffsetTime currentTime = currentDateTime.toOffsetTime();
       if (currentTime.isBefore(earliestReminder) ||
-          currentTime.isAfter(latestReminder)) {
+          currentTime.isAfter(latestReminder)) { //TODO: base this off each user's timezone?
         logger.info("It's after hours. Do nothing.");
         isAfterHours = true;
         return;
@@ -442,36 +462,21 @@ public class ReminderService {
 
       // In order to select all callers who might get a reminder today, first
       // determine what days of the month are in play.  Today is always included.
-      Set<Integer> daysToQuery = new HashSet<>();
+      Set<ReminderDate> datesToQuery = new HashSet<>();
+      datesToQuery.add(new ReminderDate(currentDateTime.toLocalDate()));
 
-      int todaysDayOfMonth = currentDateTime.getDayOfMonth();
-      daysToQuery.add(todaysDayOfMonth);
-
-      // If today is the last day of a short month, include callers whose
-      // reminder day is greater than today.
-      int numberofDaysInMonth = currentDateTime.toLocalDate().lengthOfMonth();
-      if (todaysDayOfMonth == numberofDaysInMonth && todaysDayOfMonth < 31) {
-        for (int i=todaysDayOfMonth+1; i<=31; i++) {
-          daysToQuery.add(i);
-        }
-      }
-
-      // since no reminders are sent on the weekend, include callers who
-      // would have been called on those days.
-      if (dayOfWeek.equals(DayOfWeek.MONDAY)) {
-        daysToQuery.add(currentDateTime.minusDays(1).getDayOfMonth());
-        daysToQuery.add(currentDateTime.minusDays(2).getDayOfMonth());
-      }
+      Set<ReminderDate> missedDates = getMissedDaysBefore(currentDateTime.toLocalDate());
+      datesToQuery.addAll(missedDates);
 
       StringBuilder whereClause = new StringBuilder(" WHERE " + Reminder.DAY_OF_MONTH);
-      if (daysToQuery.size() == 1) {
+      if (datesToQuery.size() == 1) {
         whereClause.append(" = ").
-            append(daysToQuery.iterator().next());
+            append(datesToQuery.iterator().next().getDay());
       }
       else {
         whereClause.append(" IN (");
-        for (Integer day : daysToQuery) {
-          whereClause.append(day).append(",");
+        for (ReminderDate date : datesToQuery) {
+          whereClause.append(date.getDay()).append(",");
         }
         whereClause.deleteCharAt(whereClause.length()-1);
         whereClause.append(")");
@@ -492,20 +497,13 @@ public class ReminderService {
         String query = SQL_SELECT_CALLERS + whereClause.toString();
         logger.info(query);
         ResultSet rs = conn.createStatement().executeQuery(query);
-        Month currentMonth = currentDateTime.getMonth();
-        int currentYear = currentDateTime.getYear();
         while (rs.next()) {
           Reminder reminder = new Reminder(rs);
-          LocalDateTime lastReminderTime = (reminder.getLastReminderTimestamp() == null) ?
-              null : reminder.getLastReminderTimestamp().toLocalDateTime();
-
-          if (lastReminderTime == null ||
-              lastReminderTime.getMonth() != currentMonth ||
-              lastReminderTime.getYear() != currentYear) {
-
+          ReminderDate correspondingReminderDate = getCorrespondingReminderDate(reminder, datesToQuery);
+          if (correspondingReminderDate != null && !reminder.hasBeenSent(correspondingReminderDate)) {
             Caller caller = new Caller(rs);
             if (!caller.isPaused()) {
-              ReminderStatus reminderStatus = sendReminder(conn, caller);
+              ReminderStatus reminderStatus = sendReminder(conn, caller, correspondingReminderDate);
               if (reminderStatus.success()) {
                 sentCount++;
               }
@@ -533,6 +531,48 @@ public class ReminderService {
           }
         }
       }
+    }
+
+    // Assumes number of missed days < 1 month
+    private Set<ReminderDate> getMissedDaysBefore(LocalDate startingDate) {
+      Set<ReminderDate> missedDays = new HashSet<>();
+      LocalDate date = startingDate.minusDays(1);
+      // Go back 1 day at a time and add it to `missedDays` if the day isn't a
+      // valid call day e.g. weekend, holiday, etc.
+      for (; !isValidCallDate(date); date = date.minusDays(1)) {
+        missedDays.add(new ReminderDate(date));
+      }
+      // If we have gone back to a previous month and that previous month is shorter than 31 days,
+      // add all days up to and including day 31
+      if (!date.getMonth().equals(startingDate.getMonth())) {
+        for (int i = date.lengthOfMonth() + 1; i <= ReminderDate.MAX_DAY; i++) {
+          ReminderDate reminderDate = new ReminderDate.Builder()
+                  .year(date.getYear())
+                  .month(date.getMonth())
+                  .day(i)
+                  .build();
+          missedDays.add(reminderDate);
+        }
+      }
+      return missedDays;
+    }
+
+    private Boolean isValidCallDate(LocalDate date){
+      DayOfWeek dayOfWeek = date.getDayOfWeek();
+      return !dayOfWeek.equals(DayOfWeek.SATURDAY) &&
+              !dayOfWeek.equals(DayOfWeek.SUNDAY) &&
+              !holidayService.isHoliday(date);
+    }
+
+    // Assumes unique day of month across all ReminderDates
+    private ReminderDate getCorrespondingReminderDate(Reminder reminder, Collection<ReminderDate> reminderDates){
+      for(ReminderDate reminderDate : reminderDates){
+        if(reminder.getDayOfMonth() == reminderDate.getDay()){
+          return reminderDate;
+        }
+      }
+      logger.warning("no matching ReminderDate found for reminder");
+      return null;
     }
 
 
